--- a/CulinaryCompanionfunctionality/app/src/main/res/layout/fragment_home.xml
+++ b/CulinaryCompanionfunctionality/app/src/main/res/layout/fragment_home.xml
@@ -54,6 +54,15 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="8dp"/>
 
+    <TextView
+        android:id="@+id/emptyText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Your recipes will be shown here."
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_marginTop="100dp"/>
+
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recipeRecyclerView"
